# outer_site-backend

./: pyproject.toml  req.txt
outer_site_backend/job_istu_edu/: .env  db.sqlite3  manage.py
outer_site_backend/job_istu_edu/infrastucture/: apps.py  models.py  serializers.py  urls.py  views.py
outer_site_backend/job_istu_edu/infrastucture/migrations/: 0001_initial.py
outer_site_backend/job_istu_edu/job_istu_edu/: asgi.py  settings.py  urls.py  wsgi.py
outer_site_backend/job_istu_edu/partner/: models.py  serializers.py  urls.py  views.py
outer_site_backend/job_istu_edu/partner/migrations/: 0001_initial.py  0002_remove_partner_directions_direction_partner_and_more.py
