[tool.poetry]
name = "outer-site-backend"
version = "0.1.0"
description = ""
authors = ["Semyon Shikota <toylenium@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
